z-index fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,7 +65,7 @@ body {
         mix-blend-mode: overlay;
         transition: opacity 0.3s ease-in-out;
         opacity: 1;
-        z-index: 100;
+        z-index: 3;
         animation: fade-streaks 10s ease-in-out infinite;
     }
 
